force-app/main/default/objects/DU_ValueEstimations__c/DU_ValueEstimations__c.object-meta.xml
<CustomObject>
    <description>CDM: The value estimations object contains the estimations of the value development of a specific vehicle. The data will be provided by DNA in 14 monthly slices. There will be 14 records for each vehicle, which is currently with the customer.</description>
    <label>Value Estimation</label>
    <nameField>
        <label>Value Estimation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Value Estimations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>