force-app/main/default/objects/DU_ValueEstimations__c/fields/DU_Asset__c.field-meta.xml
<CustomField>
    <fullName>DU_Asset__c</fullName>
    <description>CDM: Relationship with the parent record.</description>
    <label>VIN</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Value Estimations (Asset)</relationshipLabel>
    <relationshipName>DU_ValueEstimationsAsset</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>