force-app/main/default/objects/DU_ValueEstimations__c/fields/DU_BookValue__c.field-meta.xml
<CustomField>
    <fullName>DU_BookValue__c</fullName>
    <description>CDM: Stores the Book value of the Asset for a month.</description>
    <label>Book Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>