force-app/main/default/objects/DU_ValueEstimations__c/fields/DU_Date__c.field-meta.xml
<CustomField>
    <fullName>DU_Date__c</fullName>
    <description>CDM: Stores the date for which this record holds.</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>