force-app/main/default/objects/DU_ValueEstimations__c/fields/DU_ExternalID__c.field-meta.xml
<CustomField>
    <fullName>DU_ExternalID__c</fullName>
    <description>CDM: External ID for uploads.</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>