force-app/main/default/objects/DU_ValueEstimations__c/fields/DU_MarketValue__c.field-meta.xml
<CustomField>
    <fullName>DU_MarketValue__c</fullName>
    <description>CDM: Stores the market value of the Asset for a month.</description>
    <label>Market Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>