force-app/main/default/objects/DU_ValueEstimations__c/fields/DU_MarketValueError__c.field-meta.xml
<CustomField>
    <fullName>DU_MarketValueError__c</fullName>
    <description>CDM: Reason for which the Market Value field has not been updated</description>
    <label>Market Value Error</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Model code is missing</fullName>
            </value>
            <value>
                <fullName>Model year is missing</fullName>
            </value>
            <value>
                <fullName>Model year not found in lookup table</fullName>
            </value>
            <value>
                <fullName>First registration date is missing</fullName>
            </value>
            <value>
                <fullName>Mileage field is missing, has wrong format or is negative</fullName>
            </value>
            <value>
                <fullName>Damage field has wrong format or is negative</fullName>
            </value>
            <value>
                <fullName>List price is missing, has wrong format or is negative</fullName>
            </value>
            <value>
                <fullName>General exception</fullName>
            </value>
            <value>
                <fullName>Model could not be loaded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>